--- a/index.html
+++ b/index.html
@@ -24,10 +24,14 @@
     </p>
   </section>
 
-  <section class="buttons">
-    <a href="http://localhost:5000" target="_blank" class="btn btn-image">🖼️ Image Forgery Detection</a>
-    <a href="http://localhost:5173" target="_blank" class="btn btn-text">📝 Text Verification</a>
-    <a href="https://github.com/k1rbyd/Misinformation-Suite" target="_blank" class="btn btn-github">💻 GitHub Repository</a>
+  <section class="paper">
+    <h3>Full Paper</h3>
+    <div class="pdf-viewer">
+      <iframe
+        src="https://mozilla.github.io/pdf.js/web/viewer.html?file=https://k1rbyd.github.io/Misinformation-Suite/paper.pdf"
+        title="MultiGuard Paper"
+      ></iframe>
+    </div>
   </section>
 
   <section class="paper">
