Home Page Complete

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <h1>MultiGuard: A Unified Explainable Framework for Multi-Modal Forgery and Fake News Detection</h1>
-    <h2>Kaushik D · Kalaivani K · Gnana Nawin T · Mahindh Suriyakumar</h2>
+    <h2>Kalaivani K · Kaushik D · Gnana Nawin T · Mahindh Suriyakumar</h2>
     <p class="affiliation">SCOPE, Vellore Institute of Technology, Vellore</p>
   </header>
 
@@ -24,19 +24,20 @@
     </p>
   </section>
 
+  <section class="buttons">
+    <a href="http://localhost:5000" target="_blank" class="btn btn-image">🖼️ Image Forgery Detection</a>
+    <a href="https://github.com/k1rbyd/Misinformation-Suite" target="_blank" class="btn btn-github">💻 GitHub Repository</a>
+    <a href="http://localhost:5173" target="_blank" class="btn btn-text">📝 Text Verification</a>
+  </section>
+
   <section class="paper">
-    <h3>Full Paper</h3>
+    <h3>Research Paper</h3>
     <div class="pdf-viewer">
       <iframe
         src="https://mozilla.github.io/pdf.js/web/viewer.html?file=https://k1rbyd.github.io/Misinformation-Suite/paper.pdf"
         title="MultiGuard Paper"
       ></iframe>
     </div>
-  </section>
-
-  <section class="paper">
-    <h3>Full Paper</h3>
-    <iframe src="paper.pdf"></iframe>
   </section>
 
   <footer>
